changed the style

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -20,3 +20,14 @@ footer {
     color: $theme-color;
   }
 }
+
+.admin-btn {
+  position: absolute;
+}
+
+.snn-links {
+  position: absolute;
+  a {
+    margin: 10px;
+  }
+}
