--- a/app/assets/stylesheets/_post-index.scss
+++ b/app/assets/stylesheets/_post-index.scss
@@ -21,21 +21,35 @@
 }
 
 .post-container {
-  margin-top: 20px;
+  margin: 0 auto;
+  margin-top: 80px;
 }
 
 #posts {
   margin: 0 auto;
-  margin-top: 20px;
-  width: 100%;
   .box {
-	  margin: 10px;
+	  margin: 20px;
 	  width: 350px;
-	  border-radius: 7px;
+    height: 450px;
 	  text-align: center;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.10);
     .card {
+      width: 350px;
+      height: 450px;
       text-align: left;
+    .card-head{
+      height: 200px;
+      width: 100%;
+      .image{
+         max-width: 350px;
+         width: 100%;
+         height: 200px;
+       }
+       .card-body {
+         background-color: blue;
+         height: 200px;
+       }
+    }
     .post-intro {
       color: #757575;
       text-align: left;
@@ -66,10 +80,6 @@
       font-size: 14px;
       float: right;
     }
-	  img {
-	  	max-width: 100%;
-	  	height: auto;
-	  }
     #c-btn {
       padding: 2px 15px 2px 15px;
     }
@@ -123,6 +133,7 @@
  }
 }
 
+/////////////////HOVER///////////////////////
 .card:hover {
   box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11);
   img {
@@ -130,6 +141,7 @@
     transition: 0.5s;
   }
 }
+
 /////////////////////////Related Posts//////////////////////////////
 .related-post-column{
   margin-top: 60px;
@@ -177,16 +189,12 @@
 }
 //////////////////////////Pagination////////////////////////////////////
 .pagination {
-  position: absolute;
-  text-align: center;
-  margin: 0 auto;
-  bottom: -90px;
-  left: 45%;
-  padding: 20px;
   .page-link {
     color: $theme-color;
-    border-radius: 5px;
-    padding: 10px;
+  }
+  .page-item.active .page-link {
+    background-color: $theme-color !important;
+    border-color: $theme-color !important;
   }
 }
 
