--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -1,69 +1,16 @@
-<!-- SIDE NAV -->
-<div id="overlay" onClick = "closeHomeSideBar()"></div>
-<!-- SIDE NAV1 -->
-  <ul class="navbar-side" id="navbarSide">
-       <% @categories.each do |category| %>
-        <li class = "navbar-side-item"><%= link_to "#{category.name} (#{category.posts.size})", posts_path(category: category.id), class:"category-name #{category.name}" %></li>
-       <% end %>
-  </ul>
-<!-- SIDE NAV2 -->
-  <ul class="navbar-side2" id="navbarSide2">
-    <% @recent_posts.each do |post| %>
-     <li class = "navbar-side-item"><%= link_to post.title, post_path(post), class: 'recent-post-item' %></li>
-    <% end %>
-    <%#= image_tag("https://pbs.twimg.com/media/DeMEs8WU8AAuGXA.jpg",class:"user-image") %>
-  </ul>
-<!-- MAIN NAV -->
+<nav class="navbar fixed-top">
+  <h4><%= link_to "Kat's Blog", root_path, class:'navbrand' %></h4>
+    <ul class = 'header-category-list'>
+      <% @categories.each do |category| %>
+        <li><%= link_to "#{category.name}", posts_path(category: category.id), class:"btn header-c-#{category.name}" %></li>
+      <% end %>
+    </ul>
 
-<nav class = "navbar">
-  <div class="layer"></div>
-  <!-- Nav-content -->
-  <div class = "navbar-content">
-    <!-- Nav-intro -->
-    <div class = 'nav-intro'>
-      <h4><%= link_to "Kat's Blog", root_path, class:'navbrand' %></h4>
-          <div class="intro-body">
-            Computer programmer based in Tokyo.
-          </div>
+    <!--SEARCH BAR  -->
+    <div class="search-box">
+      <%= form_tag(posts_path, method: :get) do %>
+        <%= text_field_tag :title, params[:title],class:'search-bar', placeholder:'Type Here...' %>
+        <%= submit_tag 'Search', class:'btn btn-outline-info'%>
+      <% end %>
     </div>
-
-    <!-- Link Lists -->
-    <div class="link-list">
-      <ul>
-        <li id = "category" onClick = 'openHomeSideBar()'>Category</li>
-        <li onClick = 'openHomeSideBar2()'>Recent Posts</li>
-      </ul>
-    </div>
-
-    <div class = 'snn-links'>
-      <a href = 'https://github.com/KatsukiSato'><%= fa_icon "github",  class: "fa-2x" %></a>
-      <a href = 'https://twitter.com/'><%= fa_icon "twitter", class: "fa-2x" %></a>
-      <a href = 'https://www.google.com/'><%= fa_icon "google", class: "fa-2x" %></a>
-    </div>
-  </div>
-     <% if user_signed_in? %>
-      <%= link_to 'Admin Home', admin_posts_path, class:"btn btn-outline-info admin-btn" %>
-     <% end %>
 </nav>
-
-<script>
-  var homeSideBar = document.getElementById('navbarSide')
-  var homeSideBar2 = document.getElementById('navbarSide2')
-  var overlay = document.getElementById('overlay')
-
-  function openHomeSideBar(){
-    homeSideBar.classList.add('reveal');
-    overlay.style.display = 'block';
-  }
-
-  function openHomeSideBar2(){
-    homeSideBar2.classList.add('reveal');
-    overlay.style.display = 'block';
-  }
-
-  function closeHomeSideBar(){
-    homeSideBar.classList.remove('reveal');
-    homeSideBar2.classList.remove('reveal');
-    overlay.style.display = 'none';
-  }
-</script>
