changed the style

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -9,7 +9,7 @@ $React:#06D9FE;
 $Life:#80F222;
 $Rails:#CC0001;
 $theme-color: #20AD9F;
-
+$border-color :#efefef;
 body{
   font-family: Arial, Helvetica, sans-serif;
   background-color: #FFF;
