--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -5,7 +5,7 @@ footer {
   margin-top: 100px;
   height: 60px;
   width: 100%;
-  border-top: solid 1px #efefef;
+  border-top: solid 1px $border-color;
   background-color: #fff;
   p {
     font-size: 17px;
