--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -1,8 +1,6 @@
 @media (max-width: 776px) {
 /////////////NAV//////////////////////////
-  .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list, .nav-area, .content-header  {
-    display: none;
-  }
+  .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list {  display: none; }
   .mobile-nav {
     display: block;
     z-index: 1;
@@ -38,11 +36,11 @@
   }
   .post-container {
     width: 100%;
+    margin-top: 70px;
     padding: 0;
   }
   #posts {
     margin: 0 auto;
-    margin-top: 70px;
     width: 90%;
     .masonry-brick{
       position: relative !important;
@@ -54,10 +52,16 @@
       padding: 0 !important;
     }
     .box {
-      margin-top: 20px;
-    }
-    img {
-      min-width: 100%;
+      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.10);
+      .card {
+        width: 100%;
+        height: 100%;
+      }
+      img {
+        min-width: 100%;
+        max-width: 100%;
+        height: auto;
+      }
     }
   }
 /////////////////////////////////PAGINATION
