--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -23,8 +23,55 @@
   margin-top: 30px;
   bottom: 1;
   right: 120px;
-  border: solid 1px #efefef;
+  border: solid 1px $border-color;
   background-color: #E9EEF3;
   padding: 0px 15px 0px 15px;
   color: #fff;
+}
+
+
+/////////////////////////Related Posts//////////////////////////////
+.related-post-column{
+  margin-top: 60px;
+  border-bottom: solid 3px $theme-color;
+  letter-spacing: 1px;
+}
+.related-posts {
+  margin-bottom: 50px;
+  padding-bottom: 50px;
+  border-bottom: solid 1px #E8E8E8;
+  .related-posts-box {
+    margin: 10px;
+    margin-top: 25px;
+    width: 30%;
+    display: inline-block;
+    .related-post-card{
+      min-width: 250px;
+    }
+    .related-post-title {
+        color: #21252A;
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+    }
+    .related-post-title:hover {
+      color: $p-color;
+    }
+    .related-post-intro {
+      color: #757575;
+      text-align: left;
+      font-size: 17px;
+    }
+    .related-post-image{
+      height: 180px;
+      width: 100%;
+    }
+  }
+}
+
+.related-posts-box:hover {
+  .related-post-image {
+    opacity: 0.6;
+    transition: 0.5s;
+  }
 }
