--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -1,16 +1,52 @@
 <nav class="navbar fixed-top">
   <h4><%= link_to "Kat's Blog", root_path, class:'navbrand' %></h4>
-    <ul class = 'header-category-list'>
-      <% @categories.each do |category| %>
-        <li><%= link_to "#{category.name}", posts_path(category: category.id), class:"btn header-c-#{category.name}" %></li>
-      <% end %>
+    <ul class = 'nav-list'>
+      <li class = 'nav-item' onClick = 'openHomeSideBar()'>Category</li>
+      <li class = 'nav-item' onClick = 'openHomeSideBar2()'>Recent Posts</li>
     </ul>
-
     <!--SEARCH BAR  -->
-    <div class="search-box">
+    <%= fa_icon "search",  class: "fa-2x" %>
+    <!-- <div class="search-box">
       <%= form_tag(posts_path, method: :get) do %>
         <%= text_field_tag :title, params[:title],class:'search-bar', placeholder:'Type Here...' %>
         <%= submit_tag 'Search', class:'btn btn-outline-info'%>
       <% end %>
-    </div>
+    </div> -->
 </nav>
+
+
+<!-- SIDE MENUES  -->
+<div id="overlay" onClick = "closeHomeSideBar()"></div>
+<!-- SIDE NAV1 -->
+<ul class="navbar-side" id="navbarSide">
+     <% @categories.each do |category| %>
+      <li class = "navbar-side-item"><%= link_to "#{category.name} (#{category.posts.size})", posts_path(category: category.id), class:"category-name" %></li>
+     <% end %>
+</ul>
+<!-- SIDE NAV2 -->
+<ul class="navbar-side2" id="navbarSide2">
+  <% @recent_posts.each do |post| %>
+   <li class = "navbar-side-item"><%= link_to post.title, post_path(post), class: 'recent-post-item' %></li>
+  <% end %>
+</ul>
+
+
+
+<script>
+  var homeSideBar = document.getElementById('navbarSide')
+  var homeSideBar2 = document.getElementById('navbarSide2')
+  var overlay = document.getElementById('overlay')
+  function openHomeSideBar(){
+    homeSideBar.classList.add('reveal');
+    overlay.style.display = 'block';
+  }
+  function openHomeSideBar2(){
+    homeSideBar2.classList.add('reveal');
+    overlay.style.display = 'block';
+  }
+  function closeHomeSideBar(){
+    homeSideBar.classList.remove('reveal');
+    homeSideBar2.classList.remove('reveal');
+    overlay.style.display = 'none';
+  }
+</script>
