completly changed the style

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,33 +1,61 @@
 @import "global";
+.pre-footer {
+   margin-top: 100px;
+   background-color: #F8F8F8;
+   text-align: center;
+   height: 200px;
+   h4 {
+     color: #222222;
+     padding-top: 30px;
+     letter-spacing: 1px;
+   }
+   .snn-links {
+     margin: 0 auto;
+     margin-top: 40px;
+     width: 300px;
+     text-align: center;
+     a {
+       margin: 15px;
+     }
+   }
+}
 
 footer {
+  position: relative;
   bottom: 0;
-  margin-top: 100px;
-  height: 60px;
+  height: 150px;
   width: 100%;
   border-top: solid 1px $border-color;
   background-color: #fff;
+  overflow: hidden;
+  .blog-description {
+    letter-spacing: 1px;
+    margin-top: 30px;
+    margin-left: 50px;
+    p {
+      font-size: 18px;
+      color: #626262;
+    }
+    .copy-right {
+     font-size: 15px;
+    }
+  }
+  .author-stamp{
+    position: absolute;
+    bottom: 0;
+    right: 20px;
   p {
     font-size: 17px;
-    margin-right: 50px;
-    margin-top: 25px;
-    float: right;
     color: #B8BEC1;
-    bottom: 0;
     letter-spacing: 1px;
   }
   a {
     color: $theme-color;
   }
+ }
 }
+
 
 .admin-btn {
   position: absolute;
-}
-
-.snn-links {
-  position: absolute;
-  a {
-    margin: 10px;
-  }
 }
