--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,30 @@
 
   <body>
     <%= yield %>
-    <footer>
-      <p>Designed and coded by <a href = 'https://github.com/KatsukiSato'>K-Sato</a></p>
+    <div class="pre-footer">
+      <h4>Do you wanna know more about me?</h4>
       <div class = 'snn-links'>
-        <a href = 'https://github.com/KatsukiSato'><%= fa_icon "github",  class: "fa-2x" %></a>
-        <a href = 'https://twitter.com/'><%= fa_icon "twitter", class: "fa-2x" %></a>
-        <a href = 'https://www.google.com/'><%= fa_icon "google", class: "fa-2x" %></a>
+        <a href = 'https://github.com/K-Sato1995'><%= fa_icon "github",  class: "fa-3x" %></a>
+        <a href = 'https://twitter.com/'><%= fa_icon "twitter", class: "fa-3x" %></a>
+        <a href = 'https://www.google.com/'><%= fa_icon "google", class: "fa-3x" %></a>
       </div>
+    </div>
+    <footer>
+      <div class="row">
+        <div class="col-md-12 blog-description">
+          <h5>K-Sato's Blog</h5>
+          <p>This is my personal blog where I write about programming and my life.</p>
+          <p class = 'copy-right'>Copyright © 2018</p>
+        </div>
+      </div>
+
+      <div class="author-stamp">
+        <p>Designed and coded by <a href = 'https://github.com/K-Sato1995'>K-Sato</a></p>
+      </div>
+<!--
        <% if user_signed_in? %>
         <%= link_to 'Admin Home', admin_posts_path, class:"btn btn-outline-info admin-btn" %>
-       <% end %>
+       <% end %> -->
     </footer>
   </body>
 </html>
