--- a/app/assets/stylesheets/_post-index.scss
+++ b/app/assets/stylesheets/_post-index.scss
@@ -29,20 +29,21 @@
   margin: 0 auto;
   .box {
 	  margin: 20px;
-	  width: 350px;
+	  width: 370px;
     height: 450px;
 	  text-align: center;
     border-radius: 5px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.10);
     .card {
-      width: 350px;
+      width: 370px;
       height: 450px;
       text-align: left;
     .card-head{
       height: 200px;
       width: 100%;
       .image{
-         max-width: 350px;
+        border-bottom: solid 1px $border-color;
+         max-width: 370px;
          width: 100%;
          height: 200px;
        }
@@ -144,8 +145,9 @@
 
 //////////////////////////Pagination////////////////////////////////////
 .pagination {
-  margin-top: 50px;
-  // margin-left: 100px;
+  position: absolute;
+  bottom: -70px;
+  left: 20px;
   .page-link {
     color: $theme-color;
   }
