--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -2,6 +2,10 @@
   padding: 15px 100px 15px 100px;
   margin: 0 auto;
   margin-top: 80px;
+  .show-post-title {
+    font-family: "Times New Roman", Times, serif;
+    margin: 0;
+  }
   .post-created-on {
     color: #A9A9A9;
     font-weight: lighter;
@@ -20,7 +24,6 @@
 
 .go-top {
   position: absolute;
-  margin-top: 30px;
   bottom: 1;
   right: 120px;
   border: solid 1px $border-color;
