--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -1,17 +1,17 @@
 <nav class="navbar fixed-top">
-  <h4><%= link_to "Kat's Blog", root_path, class:'navbrand' %></h4>
-    <ul class = 'nav-list'>
+  <h4><%= link_to "K-Sato's Blog", root_path, class:'navbrand' %></h4>
+    <ul class = 'nav-list' id = 'nav-list'>
       <li class = 'nav-item' onClick = 'openHomeSideBar()'>Category</li>
       <li class = 'nav-item' onClick = 'openHomeSideBar2()'>Recent Posts</li>
     </ul>
     <!--SEARCH BAR  -->
-    <%= fa_icon "search",  class: "fa-2x" %>
-    <!-- <div class="search-box">
+    <%= fa_icon "search",  class: "fa-2x", id: "search-icon" , onClick: 'openSearchBar()'%>
+    <div class="search-box" id = 'search-box'>
       <%= form_tag(posts_path, method: :get) do %>
         <%= text_field_tag :title, params[:title],class:'search-bar', placeholder:'Type Here...' %>
-        <%= submit_tag 'Search', class:'btn btn-outline-info'%>
+          <span id = 'close-icon' onClick = 'closeSearchBar()'>x</span>
       <% end %>
-    </div> -->
+    </div>
 </nav>
 
 
@@ -36,6 +36,10 @@
   var homeSideBar = document.getElementById('navbarSide')
   var homeSideBar2 = document.getElementById('navbarSide2')
   var overlay = document.getElementById('overlay')
+  var nav_list = document.getElementById('nav-list')
+  var search_icon = document.getElementById('search-icon')
+  var search_box = document.getElementById('search-box')
+
   function openHomeSideBar(){
     homeSideBar.classList.add('reveal');
     overlay.style.display = 'block';
@@ -48,5 +52,17 @@
     homeSideBar.classList.remove('reveal');
     homeSideBar2.classList.remove('reveal');
     overlay.style.display = 'none';
+  }
+
+  function openSearchBar() {
+    nav_list.style.display = 'none';
+    search_icon.style.display = 'none';
+    search_box.style.display = 'block';
+  }
+
+  function closeSearchBar() {
+    nav_list.style.display = 'block';
+    search_icon.style.display = 'block';
+    search_box.style.display = 'none';
   }
 </script>
