--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -58,3 +58,12 @@
 .admin-btn {
   position: absolute;
 }
+
+.admin-footer {
+  margin-top: 70px;
+  background-color: #fff;
+  border-top: solid 1px $border-color;
+  width: 100%;
+  height: 50px;
+  bottom: 0;
+}
