--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -77,6 +77,7 @@
     </div>
   </div>
 </div>
+<%= render 'footer'%>
 <script>
 /////////TOGGLE SIDEBAR//////////////////////////////
 var sidebar = document.getElementById('admin-sidebar')
