--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,12 +4,15 @@
       <%= render 'nav' %>
     <!-- Main Content  -->
     <div class="col-md-12 post-container">
-      <div id="posts" class="transitions-enabled">
         <!-- POST IF -->
         <% if (@posts) %><!-- IF1 -->
           <% if (@posts.empty?) %><!-- IF2 -->
+            <div class="no-posts">
               <h3>No posts found.</h3>
+              <%= image_tag 'penguin.png', class: 'penguin'%>
+            </div>
             <% else %>
+            <div id="posts" class="transitions-enabled">
               <%= render 'post' %>
           <% end %> <!-- of IF2-->
         <% end %> <!-- of IF1-->
