changed the style

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -8,6 +8,7 @@ $Javascript:#F5DE1A;
 $React:#06D9FE;
 $Life:#80F222;
 $Rails:#CC0001;
+$Others: #CDCDCD;
 $theme-color: #20AD9F;
 $border-color :#efefef;
 body{
