--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -1,4 +1,5 @@
 <div class="pre-footer">
+  <a href="#top"><%= fa_icon "angle-up" , base: "square", class: "fa-3x go-top" %></a>
   <h4>Do you wanna know more about me?</h4>
   <div class = 'snn-links'>
     <a href = 'https://github.com/K-Sato1995'><%= fa_icon "github",  class: "fa-3x" %></a>
