--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,5 +1,6 @@
 @import "global";
 .pre-footer {
+  position: relative;
    margin-top: 100px;
    background-color: #F8F8F8;
    text-align: center;
@@ -66,4 +67,20 @@
   width: 100%;
   height: 50px;
   bottom: 0;
+}
+
+.go-top {
+  display: none;
+  position: absolute;
+  top: -50px;
+  right: 0;
+  border: solid 1px $border-color;
+  border-radius: 8px;
+  padding: 0px 10px 0px 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #FFF;
+}
+
+.go-top:hover {
+  background-color: rgba(32, 173, 159, 0.8);
 }
