--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -18,8 +18,11 @@
         <h5><a href = 'https://github.com/K-Sato1995'>K-Sato</a></h5>
         <p>A silly boy aspiring to be a competent programmer.</p>
       </div>
+      <div class="col-md-4 links">
+        <h5>Links</h5>
+        <%= link_to 'Archive', archives_path%>
+      </div>
     </div>
-
 
    <!-- <% if user_signed_in? %>
     <%= link_to 'Admin Home', admin_posts_path, class:"btn btn-outline-info admin-btn" %>
