fixed n+1 problem with bullet

--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -30,6 +30,8 @@
     position: absolute;
     top: 23px;
     margin-left: 20px;
+  }
+  .mobile-navbrand:hover {
     text-decoration: none;
   }
 ////////////BODY////////////////////////
