fixed some mobile-style

--- a/app/views/posts/_mobile_nav.html.erb
+++ b/app/views/posts/_mobile_nav.html.erb
@@ -9,6 +9,8 @@
     <ul class = 'mobile-dropdown-list'>
       <li class = 'mobile-dropdown-item' onClick = 'openHomeSideBar()'>Category</li>
       <li class = 'mobile-dropdown-item' onClick = 'openHomeSideBar2()'>Recent Posts</li>
+      <li class = 'mobile-dropdown-item'><%= link_to 'Archive', archives_path%></li>
+      <li class = 'mobile-dropdown-item'><%= link_to 'About', about_path%></li>
     </ul>
   </div>
 </div>
