--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -1,6 +1,6 @@
 @media (max-width: 776px) {
 /////////////NAV//////////////////////////
-  .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list, .pre-footer {  display: none; }
+  .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list, .pre-footer, .related-post-column, .related-posts {  display: none; }
   .mobile-nav {
     display: block;
     z-index: 1;
@@ -93,14 +93,6 @@
    padding: 0;
  }
 
-  .related-post-column {
-    display: none;
-  }
-
- .related-posts {
-   display: none;
- }
-
  .go-top {
   margin-top: 30px;
   right: 5%;
@@ -131,11 +123,18 @@
     cursor: pointer;
     color: #222;
     font-size: 20px;
+    a {
+      color: #222;
+    }
   }
 
   .mobile-dropdown-item:hover {
     color: #757575;
     background-color: #efefef;
+    a {
+      color: #757575;
+      text-decoration: none;
+    }
   }
 
   .navbar-side {
