added table of contents and fixed admin n1 problem

--- a/app/assets/stylesheets/_highlight.scss
+++ b/app/assets/stylesheets/_highlight.scss
@@ -81,7 +81,15 @@ ul {
 }
 
 ol {
-  padding-left: 30px; }
+  padding-left: 30px;
+  li {
+    margin-top: 10px;
+     a {
+        font-size: 18px;
+        letter-spacing: 1px;
+     }
+  }
+}
   ol li ul:first-of-type {
     margin-top: 0px; }
 
