--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -1,6 +1,7 @@
 @media (max-width: 776px) {
 /////////////NAV//////////////////////////
   .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list, .pre-footer, .related-post-column, .related-posts {  display: none; }
+
   .mobile-nav {
     display: block;
     z-index: 1;
@@ -12,6 +13,7 @@
     border-bottom: solid 1px #efefef;
     box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.10);
   }
+
   #mobile-menu-icon {
     position: absolute;
     cursor: pointer;
@@ -25,12 +27,14 @@
       border-radius: 5px;
     }
   }
+
   .mobile-navbrand {
     color: $theme-color;
     position: absolute;
     top: 23px;
     margin-left: 20px;
   }
+
   .mobile-navbrand:hover {
     text-decoration: none;
   }
@@ -70,9 +74,6 @@
       }
     }
   }
-/////////////////////////////////PAGINATION
-// .pagination {
-//  }
 /////////////////////////////////SHOW
   .show-container {
     margin-top: 90px;
@@ -145,32 +146,39 @@
     width: 70%;
   }
 /////////////////FOOOTER
-  .footer-container {display: none;}
-  .com { display: block;}
+  .footer-container {
+    display: none;
+  }
+
+  .com {
+    display: block;
+  }
+
   footer {
-  bottom: 0;
-  margin-top: 100px;
-  height: 60px;
-  width: 100%;
-  border-top: solid 1px #efefef;
-  background-color: #fff;
-  p {
-    font-size: 17px;
-    margin-right: 50px;
-    margin-top: 25px;
-    float: right;
-    color: #B8BEC1;
     bottom: 0;
-    letter-spacing: 1px;
+    margin-top: 100px;
+    height: 60px;
+    width: 100%;
+    border-top: solid 1px #efefef;
+    background-color: #fff;
+    p {
+      font-size: 17px;
+      margin-right: 50px;
+      margin-top: 25px;
+      float: right;
+      color: #B8BEC1;
+      bottom: 0;
+      letter-spacing: 1px;
+    }
+    a {
+      color: $theme-color;
+    }
   }
-  a {
-    color: $theme-color;
-  }
-}
 /////////////Archive
   .post-archive {
     padding: 10px !important;
   }
+
   .archive-container {
     padding: 15px;
     width: 100% !important;
@@ -181,6 +189,7 @@
   .about-container {
     padding: 10px !important;
   }
+
   .about-content {
     padding: 15px;
     width: 100% !important;
