--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -85,6 +85,7 @@
    margin: 0 auto;
    margin-top: 90px;
    padding: 15px !important;
+   padding-top: 30px !important;
    width: 90%;
    background-color: #fff;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.10);
