--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   margin-top: 80px;
   .about-content {
+    padding-left: 50px;
     width: 600px;
     margin: 0 auto;
     letter-spacing: 1px;
