--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,6 +31,7 @@
                </div>
           <% end %><!-- of @related_posts.each -->
         </div>
+        <a href="#top"><%= fa_icon "angle-up" , base: "square", class: "fa-3x go-top" %></a>
       </div>
     </div>
   </div>
