Modified some style

--- a/app/assets/stylesheets/_highlight.scss
+++ b/app/assets/stylesheets/_highlight.scss
@@ -15,10 +15,11 @@ html, body {
 p {
   margin: 1em 0;
   line-height: 1.9;
+  letter-spacing: 0.7px;
 }
 
 a {
-  color: #4183c4;
+  color: #00bfb6;
   text-decoration: none; }
 
 .fa-link {
