--- a/app/assets/stylesheets/_archive.scss
+++ b/app/assets/stylesheets/_archive.scss
@@ -10,6 +10,7 @@
     padding-left: 150px;
     width: 700px;
     margin: 0 auto;
+    margin-bottom: 70px;
   .post {
     letter-spacing: 1px;
     a {
