--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -1,7 +1,7 @@
 .show-container {
   padding: 15px 50px 0 50px;
   margin: 0 auto;
-  margin-top: 80px;
+  margin-top: 60px;
   .show-image {
     max-height: 500px;
     width: 100%;
@@ -21,10 +21,10 @@
     position: relative;
     margin: 0 auto;
     padding: 30px;
+    padding-right: 80px;
+    padding-left: 80px;
     padding-bottom: 100px;
     background-color: #fff;
-    border: solid 1px #efefef;
-    border-radius: 5px;
   }
   .post-context {
     padding-bottom: 20px;
