--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -6,6 +6,7 @@
     padding-left: 50px;
     width: 600px;
     margin: 0 auto;
+    margin-bottom: 50px;
     letter-spacing: 1px;
     color: #676262;
     h2 {
