added links to qiita and dev

--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -2,8 +2,8 @@
   <h4>Do you wanna know more about me?</h4>
   <div class = 'snn-links'>
     <a href = 'https://github.com/K-Sato1995'><%= fa_icon "github",  class: "fa-3x" %></a>
-    <a href = 'https://twitter.com/'><%= fa_icon "twitter", class: "fa-3x" %></a>
-    <a href = 'https://www.google.com/'><%= fa_icon "google", class: "fa-3x" %></a>
+    <a href = 'https://dev.to/ksato1995'><%= fa_icon "rocket", class: "fa-3x" %></a>
+    <a href = 'https://qiita.com/k-penguin-sato'><%= fa_icon "book", class: "fa-3x" %></a>
   </div>
 </div>
 <div class = 'footer-container'>
