--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -22,6 +22,7 @@
         <ul>
           <li><%= link_to 'Archive', archives_path%></li>
           <li><%= link_to 'About', about_path%></li>
+          <li><%= link_to 'Source Code', 'https://github.com/K-Sato1995/MyBlog' %>
         </ul>
       </div>
     </div>
