--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -187,7 +187,7 @@
   }
 
   .archive-container {
-    padding: 15px;
+    padding: 15px !important;
     width: 100% !important;
     background-color: #fff;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.10);
