footer and logo

--- a/app/views/posts/_mobile_nav.html.erb
+++ b/app/views/posts/_mobile_nav.html.erb
@@ -1,5 +1,5 @@
 <div class = 'mobile-nav' id = 'mobile-navbar'>
-  <h4><%= link_to "K-Blog", root_path, class:'mobile-navbrand' %></h4>
+  <a href = '/'><%= image_tag 'logo.png', class: 'logo'%></a>
   <div id="mobile-menu-icon" onClick = "toggleDropList()">
     <div class="menu-icon-bar"></div>
     <div class="menu-icon-bar"></div>
