--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -14,6 +14,14 @@
     box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.10);
   }
 
+  .logo {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 15px;
+    left: 20px;
+  }
+
   #mobile-menu-icon {
     position: absolute;
     cursor: pointer;
@@ -77,6 +85,7 @@
 /////////////////////////////////SHOW
   .show-container {
     margin-top: 90px;
+    margin-bottom: 100px;
     padding: 0;
     background-color: #F9F9F9;
   }
@@ -163,7 +172,6 @@
 
   footer {
     bottom: 0;
-    margin-top: 100px;
     height: 60px;
     width: 100%;
     border-top: solid 1px #efefef;
